Correction de l'ID #wrappr en #wrapped

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
     background-color: transparent;
 }
 
-#wrappr {
+#wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
